--- a/www/index.html
+++ b/www/index.html
@@ -71,7 +71,7 @@
             <div id="alert-modal"> </div>
             <div class="animate form">
                 <section class="login_content">
-                    <img src="images/logo2.png" class="col-md-12 col-sm-12 col-xs-12">
+                    <img src="images/logo.png" class="col-md-12 col-sm-12 col-xs-12">
                     <p>PCAARRD Alerts and Adviories</p>
                     <button id="login-btn" class="btn btn-primary">Login using Facebook</button><br/>
                     <button id="guest-login-btn" class="btn btn-primary">Sign in as Guest</button>
