--- a/www/send-alert.html
+++ b/www/send-alert.html
@@ -199,7 +199,7 @@
                                             </div>
                                         </div>
 
-                                        <div class="form-group">
+                                        <div class="form-group" id="commodity">
                                             <label class="col-md-3 col-sm-3 col-xs-12 control-label">
                                                 Crops
                                                 <span class="required">*</span>
@@ -376,6 +376,10 @@
             }
 
             $(function () {
+
+                if (localStorage.getItem("_has_commodity") == "false") {
+                    $('#commodity').remove();
+                }
 
                 window.Parsley.addValidator('locationcheck', {
                   validateString: function(value) {
