Settings bug fix

--- a/www/settings.html
+++ b/www/settings.html
@@ -440,7 +440,7 @@
                 //Checks if occupation and days_before has changed before calling api
                 //e.preventDefault();
                 var occupation = $('#occupation').val(),
-                    senddaysbefore = $('senddaysbefore').val(),
+                    senddaysbefore = $('#senddaysbefore').val(),
                     previous_usersettings = null;
 
 
