Transparent logo bg, Others alert type

--- a/www/report.html
+++ b/www/report.html
@@ -150,6 +150,7 @@
                                                     <option value="Weather">Weather</option>
                                                     <option value="Pest">Pest</option>
                                                     <option value="Diseases">Diseases</option>
+                                                    <option value="Other">Other</option>
                                                 </select>
                                             </div>
                                         </div>
