--- a/www/send-alert.html
+++ b/www/send-alert.html
@@ -152,6 +152,7 @@
                                                     <option value="Weather">Weather</option>
                                                     <option value="Pest">Pest</option>
                                                     <option value="Diseases">Diseases</option>
+                                                    <option value="Other">Other</option>
                                                 </select>
                                             </div>
                                         </div>
