--- a/www/send-alert.html
+++ b/www/send-alert.html
@@ -200,7 +200,7 @@
                                             </div>
                                         </div>
 
-                                        <div class="form-group" id="commodity">
+                                        <div class="form-group hidden" id="commodity">
                                             <label class="col-md-3 col-sm-3 col-xs-12 control-label">
                                                 Crops
                                                 <span class="required">*</span>
@@ -380,6 +380,9 @@
 
                 if (localStorage.getItem("_has_commodity") == "false") {
                     $('#commodity').remove();
+                }
+                else{
+                    $('#commodity').removeClass("hidden");
                 }
 
                 window.Parsley.addValidator('locationcheck', {
