Auto detect location on report page. Initial

--- a/www/report.html
+++ b/www/report.html
@@ -432,6 +432,12 @@
                     setLocationAutoComplete(JSON.parse(localStorage.getItem("locations")));
                 }
 
+                if (localStorage.getItem("gps_enabled") == "true") {
+                    //Get town detected earlier
+                    var town = localStorage.getItem("town");
+                    $('#location').val(town);
+                }
+
             });
 
         </script>
