--- a/www/alerts-reported.html
+++ b/www/alerts-reported.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Sarai Alerts | Reports</title>
+    <title> | Reports</title>
 
     <!-- Bootstrap core CSS -->
 
