--- a/www/view-report.html
+++ b/www/view-report.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Sarai Alerts | View Report</title>
+    <title> | View Report</title>
 
     <!-- Bootstrap core CSS -->
 
