use gps settings bug

--- a/www/settings.html
+++ b/www/settings.html
@@ -465,7 +465,7 @@
                             usegps = 1;
                         }
 
-                        updateUser(occupation, senddaysbefore);
+                        updateUser(occupation, senddaysbefore, usegps);
 
                         previous_usersettings.senddaysbefore = senddaysbefore;
                         previous_usersettings.occupation = occupation;
