GPS settings bug fix

--- a/www/settings.html
+++ b/www/settings.html
@@ -349,7 +349,7 @@
                     {
                         occupation: occupation, 
                         senddaysbefore: senddaysbefore,
-                        usegps: usegps,
+                        gps: usegps,
                         token: localStorage.getItem("token")
                     }, 
                     function(){
