Set gpsloc for report

--- a/www/report.html
+++ b/www/report.html
@@ -467,7 +467,7 @@
 
 
                 var town = localStorage.getItem("town");
-                $('#location').val(town);
+                $('#location').val(localStorage.getItem("gpsloc"));
                 
                 
 
