--- a/www/forecast.html
+++ b/www/forecast.html
@@ -251,6 +251,7 @@
 
         if (localStorage.getItem("forecast")) {
             //@TODO: Cache forecast. expire every N hours
+            alert("has forecast cache");
             populateForecast();
         }
         else {
@@ -265,6 +266,8 @@
                 }
             });
 
+            document.addEventListener("deviceready", onDeviceReady, false);
+            
             if (localStorage.getItem("gps") == "0") {
                 requestForecast(localStorage.getItem("town"));
             }
@@ -283,7 +286,7 @@
                 }
                 else{
                     //If device
-                    document.addEventListener("deviceready", onDeviceReady, false);
+                    //document.addEventListener("deviceready", onDeviceReady, false);
                 }
                 
             }
