Bug fix on all location setting and history

--- a/www/forecast.html
+++ b/www/forecast.html
@@ -419,6 +419,7 @@
         $('#' + date + ' h2').css('font-weight', 'bold');
         $('#' + date + ' h2').css('background', '#73879c');
         $('#' + date + ' h2').css('color', '#fff');
+        $("#forecast").LoadingOverlay("hide");
 
     });
 
