--- a/www/history.html
+++ b/www/history.html
@@ -125,7 +125,7 @@
 
             request(
                 localStorage.getItem("_api_server") + "/alerts/history", {
-                tagid: getTagIDsString(),
+                //tagid: getTagIDsString(),
                 offset: offset
             }, 
                 function(result){
