--- a/www/index.html
+++ b/www/index.html
@@ -37,6 +37,12 @@
     <script type="text/javascript" src="js/index.js"></script>
     <script type="text/javascript">
             app.initialize();
+
+            document.addEventListener("deviceready", OnDeviceReady, false);
+
+            function OnDeviceReady()    {
+                app.receivedEvent('deviceready');
+            }
     </script>
 
     <script>
