Test trigger on device ready

--- a/www/index.html
+++ b/www/index.html
@@ -38,11 +38,11 @@
     <script type="text/javascript">
             app.initialize();
 
-            document.addEventListener("deviceready", OnDeviceReady, false);
+            /*document.addEventListener("deviceready", OnDeviceReady, false);
 
             function OnDeviceReady()    {
                 app.receivedEvent('deviceready');
-            }
+            }*/
     </script>
 
     <script>
