Alert details back button

--- a/www/alerts-reported.html
+++ b/www/alerts-reported.html
@@ -160,6 +160,8 @@
                 getReports(offset);
             });
 
+            localStorage.setItem("prev_page", window.location.href)
+
 
         });
     </script>
