--- a/www/history.html
+++ b/www/history.html
@@ -174,6 +174,8 @@
                 getHistory(offset);
             });
 
+            localStorage.setItem("prev_page", window.location.href)
+
 
         });
     </script>
